weird z-index issues; however, scanelines are cleaned up

--- a/web/static/css/fishing.css
+++ b/web/static/css/fishing.css
@@ -6,7 +6,7 @@
 #fishing-foreground, #fishing-bg-1, #fishing-bg-2, #fishing-bg-3, #fishing-bg-4 {
     width: 720px;
     top: 300px;
-    z-index: 1;
+    z-index: -2;
     opacity: 0.75;
 }
 
