--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -1,5 +1,5 @@
 a, p, h1, h2, h3, h4, h5, h6 {
-  z-index: 1000;
+  z-index: 1005;
   opacity: 0.5;
   font-weight: bold;
 }
@@ -11,9 +11,11 @@ body {
     color: white;
     margin: 0;
     padding: 0;
+}
 
-    width: 100vw;
-    height: 100vh;
+.crt {
+    width: 800px;
+    height: 600px;
     background: linear-gradient(to top, #000, #000, #333, #333);
     background-size: cover;
     background-size: 100% 5px;
@@ -26,6 +28,7 @@ body {
     border-radius: 20px;
     font-size: large;
     align-items: center;
+    z-index: 0;
 }
 
 img {
@@ -50,7 +53,7 @@ img {
 #monitor {
   width: 800px;
   height: 600px;
-  z-index: 50;
+  z-index: -1;
 }
 
 #content {
@@ -124,7 +127,7 @@ button:focus, input[type=text]:focus {
 }
 
 @media screen{
-  body {
+  .crt {
     animation: scanlines infinite 1s linear;
   }
 } 
@@ -138,14 +141,18 @@ button:focus, input[type=text]:focus {
 }
 
 .fish {
-   width: 196px;
-   height: auto;
-   z-index: 1001;
-   top:200px;
-   left:400px;
-   background-color: #00ff0080;
+  width: 196px;
+  height: auto;
+  z-index: 10000;
+  top:200px;
+  left:400px;
+  background-color: #00ff0080;
+  margin-left: 80px;
 }
 
 .fish:hover {
-   background-color: #00ff0090;
+  z-index: 10000;
+  background-color: #00ff0090;
+  cursor: pointer;
+  transform: scale(1.1);
 }
